# PsychoBot

./: .gitignore  README.md  docker-compose.yml
project/: Dockerfile  celerybeat-schedule  entrypoint.sh  pyproject.toml  requirements.txt
project/core/: celery.py  settings.py  urls.py
project/psycho_survey/: admin.py  apps.py  models.py
project/psycho_survey/migrations/: 0001_initial.py  0002_alter_questionnaire_options_task_amount_of_message_and_more.py  0003_alter_questionnaire_is_active.py  0004_alter_task_amount_of_message.py  0005_questionnaire_eighth_task_questionnaire_fifth_task_and_more.py  0006_alter_questionnaire_eighth_task_and_more.py  0007_messages.py  0008_alter_messages_options_alter_messages_user_review.py  0009_messages_msg_count.py  0010_alter_questionnaire_eighth_task_and_more.py  0011_questionnaire_unique_is_active.py  0012_remove_questionnaire_unique_is_active_and_more.py  0013_remove_questionnaire_unique_is_active_and_more.py
project/telegram_bot/: admin.py  apps.py  keyboards.py  loader.py  models.py  tasks.py  utils.py  views.py
project/telegram_bot/Tinkoff/: __init__.py
project/telegram_bot/consts/: error_const.py  messages_const.py
project/telegram_bot/migrations/: 0001_initial.py  0002_alter_commands_options_and_more.py  0003_alter_telegramuser_timezone.py  0004_alter_telegramuser_timezone.py  0005_telegramuser_completed_course.py  0005_telegramuser_order_id_telegramuser_payment_status.py  0006_alter_telegramuser_order_id.py  0006_telegramuser_phone.py  0008_merge_20230603_2019.py  (+6 more)
project/tinkoff/: apps.py  views.py
(+3 files in other folders)
